fixed whitespace issue

--- a/assets/less/thumbnail.less
+++ b/assets/less/thumbnail.less
@@ -21,7 +21,6 @@
       -webkit-transition: all 0.3s ease-in-out;
 
       a {
-         display: block;
          img{
             width: 100%;
             height: 100%;
